--- a/Contacto.html
+++ b/Contacto.html
@@ -67,22 +67,17 @@
       <div class="form-floating">
     <textarea class="form-control" placeholder="Comente aqui" id="floatingTextarea2" style="height: 250px; width: 250px"></textarea>
 </div>
-<div>
-<button type="submit" class="btn btn" data-toggle="modal" data-target="#contenedor-modal">ENVIAR</button>
-</div>
-<div class="modal fade" id="contenedor-modal" tabindex="-1">
-    <div class="modal-dialog">
-        <div class="nodal-content">
-            <div class="modal-header">
-                <h2 class="modal-title">Disculpe las molestias</h2>
-                <button class="close" data-dismiss="modal">
-                    <span>&times</span>
-                </button>
-            </div>
-    <div class="modal-body"><p>Página momentáneamente desactivada</p></div>
-</div>
-</div>
-
+<div id="footer">
+  <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
+       <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
+       <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
+       <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
+       <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
+ </ul>
+ <div class="mx-auto" style="width: 200px;">
+   lostabalerosoficial
+ </div>
+</div id="footer">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
