--- a/Contacto.html
+++ b/Contacto.html
@@ -6,6 +6,7 @@
    <meta name=viewport content="width=device-width, initial-scale=1">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
    <link rel="stylesheet" type="text/css" href="css/estilos.css">
+   <link rel="stylesheet" href="../icofont/icofont.min.css">
 </head>
 <body class="color1">
     <div id="header" class="bg-light">
@@ -66,17 +67,6 @@
       <div class="form-floating">
     <textarea class="form-control" placeholder="Comente aqui" id="floatingTextarea2" style="height: 250px; width: 250px"></textarea>
 </div>
-<div id="footer">
-  <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
-       <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
-       <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
-       <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
-       <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
- </ul>
- <div class="mx-auto" style="width: 200px;">
-   lostabalerosoficial
- </div>
-</div id="footer">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
