--- a/Contacto.html
+++ b/Contacto.html
@@ -11,7 +11,7 @@
 <body class="color1">
     <div id="header" class="bg-light">
         <div class="container-flex">    
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#14d68f">
+            <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#14d68f";>
             <div class="container-fluid"> 
               <a class="navbar-brand" href="#"></a> 
               <img src="assets/logotaba.jpg" alt="logotaba" width="100px" height="100px">
@@ -42,30 +42,32 @@
     </div>
     </div>
    <div class="subtitulo1">Contacto</div>
-   <div class="cont">
-   <form class="contacto">
-    <div class="input-group">
-        <span class="input-group-text">Nombre y Apellido</span>
-    </div>
-    <div class="col-sm-10">
-        <input type="NombreyApellido" class="form-control" id="imputtext">
-    </div>
-    <div class="row mb-3">
-      <label for="inputEmail3" class="col-sm-2 col-form-label">Correo electrónico</label>
-    </div>
-    <div class="col-sm-10">
-        <input type="email" class="form-control" id="inputEmail3">
-    </div>
-    <div>
-      <label for="inputEmail3" class="col-sm-2 col-form-label">Asunto</label>
-      </div>
-    <div class="col-sm-10">
-        <input type="email" class="form-control" id="inputEmail3">
-     </div>
-    </form>
-  <label for="floatingTextarea2" class="color">Comentarios</label>
-      <div class="form-floating">
-    <textarea class="form-control" placeholder="Comente aqui" id="floatingTextarea2" style="height: 250px; width: 250px"></textarea>
+   <div class="contenedor-">
+      <div class="cont">
+          <form class="contacto">
+            <div class="row mb-3">
+              <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre y Apellido</label>
+            </div>
+              <div class="col-sm-10">
+                  <input type="NombreyApellido" class="form-control" id="imputtext">
+              </div>
+              <div class="row mb-3">
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Correo electrónico</label>
+              </div>
+              <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail3">
+              </div>
+              <div>
+                <label for="inputEmail3" class="col-sm-2 col-form-label">Asunto</label>
+                </div>
+              <div class="col-sm-10">
+                  <input type="email" class="form-control" id="inputEmail3">
+              </div>
+              </form>
+              <label for="floatingTextarea2" class="color">Comentarios</label>
+                <div class="form-floating">
+                    <textarea class="form-control" placeholder="Comente aqui" id="floatingTextarea2" style="height: 250px; width: 250px"></textarea>
+                </div>
 </div>
 <div id="footer">
   <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
