--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     </div>
     <img src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
+    <button class="button" class="mx-auto" style="width: 500px;">Reservá tu entrada</button>
+    <br><img src="assets/lostabaleroos.jpg" alt="Los Tabaleros presentación" position="fixed" width="45%"></br>
     <div id="footer">
        <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
             <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
