--- a/Discografía.html
+++ b/Discografía.html
@@ -43,8 +43,8 @@
         </div>
     <div class="subtitulo2">Discografía</div>
         <div class="discos1"> 
-            <div><img class="contain" src="assets/burbuja loca.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
-            <div><img class="contain" src="assets/unanoche.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
+            <div><img class="contain" src="assets/burbuja loca.png" alt="Los Tabaleros" width="100%" height="320px"></div>
+            <div><img class="contain" src="assets/unanoche.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
         <div class="discos2">
             <div><img class="contain" src="assets/demonio.jpeg" alt="Los Tabaleros"width="100%" height="320px"></div>
