--- a/Discografía.html
+++ b/Discografía.html
@@ -51,8 +51,8 @@
             <div><img class="contain" src="assets/chuy.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
         <div class="discos3">
-            <div><img class="contain" src="assets/OIP.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
-            <div><img class="contain" src="assets/lolita.jpg" alt="Los Tabaleros" width="100%" height="320px"></div>
+            <div><img class="contain" src="assets/uy.png" alt="Los Tabaleros" width="100%" height="320px"></div>
+            <div><img class="contain" src="assets/lolita.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
         <button class="button" class="mx-auto" style="width: 200px;">Descarga</button>
         <div id="footer">
