--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#14d68f">
             <div class="container-fluid"> 
               <a class="navbar-brand" href="#"></a> 
-              <img src="assets/logotaba.jpg" alt="logotaba" width="100px" height="100px">
+              <img src="assets/logotaba.jpg" class="logotaba" alt="logotaba" height="100px">
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>  
