--- a/Discografía.html
+++ b/Discografía.html
@@ -58,12 +58,14 @@
     </div>
         <button class="button" class="mx-auto" style="width: 200px;">Descarga</button>
         <div id="footer">
+          <div class="redes">
           <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
                <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
                <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
                <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
                <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
          </ul>
+         </div>
          <div class="mx-auto" style="width: 200px;">
            lostabalerosoficial
          </div>
