--- a/Galería.html
+++ b/Galería.html
@@ -42,7 +42,8 @@
   </div>
   </div>
    <div class="subtitulo3">Galería</div>
-<div>
+<div class="grupos">
+   <div>
    <div class="grupo1">
       <div class="foto">
          <img class="contain" class="rounded float-start" src="assets/FOTO1.jpg" alt="Los Tabaleros" width="100%" height="300px">
@@ -96,13 +97,16 @@
          <img class="contain" class="rounded float-end" src="assets/FOTO12.jpg" alt="Los Tabaleros" width="100%" height="300px">
       </div>
 </div>
+</div>
 <div id="footer">
+   <div class="redes">
    <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
         <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
         <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
         <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
         <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
   </ul>
+  </div>
   <div class="mx-auto" style="width: 200px;">
     lostabalerosoficial
   </div>
