--- a/Galería.html
+++ b/Galería.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>lostabaleros</title>
+	<title>Los Tabaleros - Galería</title>
 	<meta charset=utf-8>
-	<meta name=viewport content="width=device-width, initial-scale=1">
+	<meta name=viewport description="Fotos de Los Tabaleros abajo y arriba del escenario" content="width=device-width, initial-scale=1">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
    <link rel="stylesheet" type="text/css" href="css/estilos.css">
    <link rel="stylesheet" href="./icofont/icofont.min.css">
