--- a/Contacto.html
+++ b/Contacto.html
@@ -8,39 +8,38 @@
    <link rel="stylesheet" type="text/css" href="css/estilos.css">
    <link rel="stylesheet" href="./icofont/icofont.min.css">
 </head>
-<body class="color1">
-    <div id="header" class="bg-light">
-        <div class="container-flex">    
-            <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#14d68f";>
-            <div class="container-fluid"> 
-              <a class="navbar-brand" href="#"></a> 
-              <img src="assets/lostabaleros.jpg" class="logotaba" alt="logotaba" width="100px" height="100px">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>  
-              <div class="collapse navbar-collapse" id="navbarNav"> 
-                <ul class="nav nav-pills flex-column flex-sm-row">
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Biografía.html">Biografía</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Discografía.html">Discografía</a>
-                  </li>  
-                  <li class="nav-item">
-                    <a class="nav-link" href="Galería.html">Galería</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="Contacto.html">Contacto</a>
-                  </li>
-                </ul>
-            </div>
-        </nav>
-    </div>
-    </div>
-    </div>
+<div id="header" class="bg-light">
+  <div class="container-flex">    
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#14d68f">
+      <div class="container-fluid"> 
+        <a class="navbar-brand" href="#"></a> 
+        <img src="assets/lostabaleros.jpg" class="logotaba" alt="logotaba" height="100px">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>  
+        <div class="collapse navbar-collapse" id="navbarNav"> 
+          <ul class="nav nav-pills flex-column flex-sm-row">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Biografía.html">Biografía</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Discografía.html">Discografía</a>
+            </li>  
+            <li class="nav-item">
+              <a class="nav-link" href="Galería.html">Galería</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="Contacto.html">Contacto</a>
+            </li>
+          </ul>
+      </div>
+  </nav>
+</div>
+</div>
+</div>
    <div class="subtitulo1">Contacto</div>
    <div class="contenedor-">
       <div class="cont">
@@ -69,6 +68,22 @@
                     <textarea class="form-control" placeholder="Comente aqui" id="floatingTextarea2" style="height: 250px; width: 250px"></textarea>
                 </div>
 </div>
+<button class="button3" class="mx-auto" data-bs-target="#exampleModal">Enviar</button>
+<!--<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon">ENVIAR</span>
+</button>-->  
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Página actualmente en proceso</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+</div>
+<div class="modal-footer">
+  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+</div>
+<div class="collapse navbar-collapse" id="navbarNav"> 
+  <ul class="nav nav-pills flex-column flex-sm-row">
 <div id="footer">
   <div class="redes">
   <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
