--- a/Contacto.html
+++ b/Contacto.html
@@ -68,6 +68,19 @@
                     <textarea class="form-control" placeholder="Comente aqui" id="floatingTextarea2" style="height: 250px; width: 250px"></textarea>
                 </div>
 </div>
+<button class="button3" class="mx-auto" style="width: 282px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
+		<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+			<div class="modal-dialog">
+			  <div class="modal-content">
+				<div class="modal-header">
+				  <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+				  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+		</div>
+		<div class="modal-footer">
+			<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+		</div>
+    	</div>
+  		</div>
 <div id="footer">
   <div class="redes">
   <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
