--- a/Biografía.html
+++ b/Biografía.html
@@ -58,6 +58,7 @@
            <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
      </ul>
      </div>
+     </div>
      <div class="mx-auto" style="width: 200px;">
        lostabalerosoficial
      </div>
