--- a/index.html
+++ b/index.html
@@ -47,7 +47,20 @@
     </div>
     <img src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
-    <button class="button3" class="mx-auto" style="width: 210px">Reservá tu entrada</button>
+    <button class="button3" class="mx-auto" style="width: 200px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Reservá tu entrada</button>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+    </div>
+    </div>
+    </div>
+</div>
     <br><img src="assets/fotofoto.jpg" class="ff" alt="Los Tabaleros presentación" position="fixed" width="60%"></br>
     <div id="footer">
       <div class="redes">
