--- a/Discografía.html
+++ b/Discografía.html
@@ -48,26 +48,104 @@
             <div><img class="contain" src="assets/unanoche.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
         <div class="botones1">
-          <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
-          <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
-          </div>
+          <button class="button" class="mx-auto" style="width: 150px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Descarga</button>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+    </div>
+    </div>
+    </div>
+</div>
+<button class="button" class="mx-auto" style="width: 150px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Descarga</button>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+    </div>
+    </div>
+    </div>
+</div>
+</div>
         <div class="discos2">
             <div><img class="contain" src="assets/demonio.png" alt="Los Tabaleros"width="100%" height="320px"></div>
             <div><img class="contain" src="assets/chuy.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
         <div class="botones2">
-          <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
-          <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
-          </div>
+          <button class="button" class="mx-auto" style="width: 150px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Descarga</button>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+    </div>
+    </div>
+    </div>
+</div>
+<button class="button" class="mx-auto" style="width: 150px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Descarga</button>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+    </div>
+    </div>
+    </div>
+</div>
+</div>
         <div class="discos3">
             <div><img class="contain" src="assets/uy.png" alt="Los Tabaleros" width="100%" height="320px"></div>
             <div><img class="contain" src="assets/lolita.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
     </div>
         <div class="botones3">
-        <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
-        <button class="button" class="mx-auto" style="width: 150px;">Descarga</button>
-        </div>
+          <button class="button" class="mx-auto" style="width: 150px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Descarga</button>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+    </div>
+    </div>
+    </div>
+</div>
+<button class="button" class="mx-auto" style="width: 150px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Descarga</button>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+    </div>
+    </div>
+    </div>
+</div>
+</div>
         <div id="footer">
           <div class="redes">
           <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
