--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="animate__animated animate__jackInTheBox">
         <p class="titulo"> Los Tabaleros</p>
     </div>
-    <img src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
+    <img class="banner" src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
     <button class="button3" class="mx-auto" style="width: 220px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Reservá tu entrada</button>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
