--- a/Contacto.html
+++ b/Contacto.html
@@ -65,7 +65,7 @@
               </form>
               <label for="floatingTextarea2" class="color">Comentarios</label>
                 <div class="form-floating">
-                    <textarea class="form-control" placeholder="Comente aqui" id="floatingTextarea2" style="height: 300px; width: 500px"></textarea>
+                    <textarea class="form-control1" placeholder="Comente aqui" id="floatingTextarea2" style="height: 300px; width: 500px;"></textarea>
                 </div>
                 <button class="button3" class="mx-auto" style="width: 282px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
                 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -83,7 +83,7 @@
 </div>
 <div id="footer">
   <div class="redes">
-  <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
+  <ul class="redes_sociales" class="mx-auto" style="width: 200px">
        <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
        <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
        <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
