--- a/Contacto.html
+++ b/Contacto.html
@@ -40,47 +40,31 @@
 </div>
 </div>
 </div>
-   <div class="subtitulo1">Contacto</div>
-   <div class="contenedor-">
-      <div class="cont">
-          <form class="contacto">
-            <div class="row mb-3">
-              <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre y Apellido</label>
-            </div>
-            <div class="col-sm-10">
-              <input type="NombreyApellido" class="form-control" id="imputtext">
-            </div>
-            <div class="row mb-3">
-              <label for="inputEmail3" class="col-sm-2 col-form-label">Correo electrónico</label>
-            </div>
-            <div class="col-sm-10">
-              <input type="email" class="form-control" id="inputEmail3">
-            </div>
-            <div>
-              <label for="inputEmail3" class="col-sm-2 col-form-label">Asunto</label>
-            </div>
-            <div class="col-sm-10">
-              <input type="email" class="form-control" id="inputEmail3">
-            </div>
-              </form>
-              <label for="floatingTextarea2" class="color">Comentarios</label>
-                <div class="form-floating">
-                    <textarea class="form-control1" placeholder="Comente aqui" id="floatingTextarea2"></textarea>
-                </div>
-                <button class="button3" class="mx-auto" style="width: 100px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
-                <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                  <div class="modal-dialog">
-                    <div class="modal-content">
-                    <div class="modal-header">
-                      <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                </div>
-                </div>
-          </div>
-</div>
+<div class="subtitulo1">Contacto</div>
+<form class="contacto">
+  <div class="row mb-3">
+    <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre y Apellido</label>
+  </div>
+  <div class="col-sm-10">
+    <input type="NombreyApellido" class="form-control" id="imputtext">
+  </div>
+  <div class="row mb-3">
+    <label for="inputEmail3" class="col-sm-2 col-form-label">Correo electrónico</label>
+  </div>
+  <div class="col-sm-10">
+    <input type="email" class="form-control" id="inputEmail3">
+  </div>
+  <div>
+    <label for="inputEmail3" class="col-sm-2 col-form-label">Asunto</label>
+  </div>
+  <div class="col-sm-10">
+    <input type="asunto" class="form-control" id="inputEmail3">
+  </div>
+  <label for="floatingTextarea2" class="color">Comentarios</label>
+  <div class="col-sm-10">
+    <input type="comentarios" class="form-control1" id="inputEmail3">
+  </div>
+</form>  
 <div id="footer">
   <div class="redes">
   <ul class="redes_sociales1" class="mx-auto" style="width: 200px">
