--- a/Contacto.html
+++ b/Contacto.html
@@ -64,7 +64,21 @@
   <div class="col-sm-10">
     <input type="comentarios" class="form-control1" id="inputEmail3">
   </div>
-</form>  
+</form> 
+<button class="button3" class="mx-auto" style="width: 80px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-footer">
+        <button type="button3" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
 <div id="footer">
   <div class="redes">
   <ul class="redes_sociales1" class="mx-auto" style="width: 200px">
