--- a/Contacto.html
+++ b/Contacto.html
@@ -60,11 +60,12 @@
   <div class="col-sm-10">
     <input type="asunto" class="form-control" id="inputEmail3">
   </div>
-  <label for="floatingTextarea2" class="color">Comentarios</label>
-  <div class="col-sm-10">
+  <div>
+    <label for="inputEmail3" class="col-sm-2 col-form-label">Comentarios</label>
+  </div>
+  <div class="col-sm-10" width="80px">
     <input type="comentarios" class="form-control1" id="inputEmail3">
   </div>
-</form> 
 <button class="button3" class="mx-auto" style="width: 80px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
